WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118552
[GTK] Layout Test accessibility/deleting-iframe-destroys-axcache.html, platform/gtk/accessibility/replaced-objects-in-anonymous-blocks.html are failing
https://bugs.webkit.org/show_bug.cgi?id=118552
Summary
[GTK] Layout Test accessibility/deleting-iframe-destroys-axcache.html, platfo...
Simon Pena
Reported
2013-07-11 01:51:25 PDT
The following layout test are failing on [GTK] after
r152537
accessibility/deleting-iframe-destroys-axcache.html platform/gtk/accessibility/replaced-objects-in-anonymous-blocks.html
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug%20WK1/r152560%20%283023%29/results.html
Attachments
Patch proposal
(5.50 KB, patch)
2013-07-11 04:51 PDT
,
Mario Sanchez Prada
cfleizach
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mario Sanchez Prada
Comment 1
2013-07-11 04:51:08 PDT
Created
attachment 206446
[details]
Patch proposal It seems I just forgot to add this extra check when adding the OR condition in a previous patch.
Mario Sanchez Prada
Comment 2
2013-07-11 09:21:43 PDT
This is causing some interesting crashes in debug builds so, as much as I hate putting pressure, it would be great to have it reviewed soon. Fortunately, I believe it will be a no brainer :)
Mario Sanchez Prada
Comment 3
2013-07-11 11:59:05 PDT
Committed
r152574
: <
http://trac.webkit.org/changeset/152574
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug