[GTK] Layout Test accessibility/deleting-iframe-destroys-axcache.html, platform/gtk/accessibility/replaced-objects-in-anonymous-blocks.html are failing https://bugs.webkit.org/show_bug.cgi?id=118552

Patch by Mario Sanchez Prada <mario.prada@samsung.com> on 2013-07-11
Reviewed by Chris Fleizach.

Source/WebCore:

Do not assume always that we have a RenderText renderer when
calling to toRenderText(), since we might be executing that part
of the code due to have requested to include all the children.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::textUnderElement): Add
missing guard for RenderText, needed after r152537.

LayoutTests:

Remove tests that are no longer expected to crash.

* platform/gtk/TestExpectations: Removed tests.

Canonical link: https://commits.webkit.org/136517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152574 268f45cc-cd09-0410-ab3c-d52691b4dbfc